--- a/src/components/WordArea/WordArea.css
+++ b/src/components/WordArea/WordArea.css
@@ -15,3 +15,9 @@
 .wordArea div:first-child {
   border-left: 1px solid lime;
 }
+
+@media only screen and (min-width: 375px) {
+  .wordArea {
+    font-size: 0.7500rem;
+  }
+}
