--- a/src/components/ReplayButton/ReplayButton.css
+++ b/src/components/ReplayButton/ReplayButton.css
@@ -1,4 +1,4 @@
-.infoArea {
+.replayInfoArea {
   background: #0e0e0e;
   border: 1px solid lime;
   border-radius: 0 0 15px 15px;
@@ -8,7 +8,7 @@
   text-align: center;
 }
 
-.infoArea button {
+.replayInfoArea button {
   border: 0;
   background: lime;
   color: #0e0e0e;
