--- a/src/Game.css
+++ b/src/Game.css
@@ -15,11 +15,18 @@ html, body, #root, .Game {
 main {
   /* background-color: #0e0e0e; */
   color: lime;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
   flex: 1 0 auto;
   margin: 0 auto;
   max-width: 1280px;
   padding: 1rem;
   width: 100%;
+}
+
+main header, main section {
+  flex: 0 1 auto;
 }
 
 main::before {
@@ -58,7 +65,6 @@ header, footer {
 }
 
 header {
-  border: 1px solid lime;
   border-radius: 15px 15px 0 0;
 }
 
@@ -69,5 +75,20 @@ footer .footer-name {
 @media only screen and (min-width: 375px) {
   header, footer {
     font-size: 1rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  main {
+    padding: 2rem;
+  }
+  header {
+    font-size: 1.5rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  header {
+    font-size: 2.25rem
   }
 }
