--- a/src/components/EventArea/EventArea.css
+++ b/src/components/EventArea/EventArea.css
@@ -1,7 +1,7 @@
 .imageWrapper {
   background: #0e0e0e;
-  border-left: 1px solid lime;
-  border-right: 1px solid lime;
+  /* border-left: 1px solid lime;
+  border-right: 1px solid lime; */
   border-bottom: 1rem solid lime;
   display: grid;
   grid-template-columns: 1fr 1fr;
