--- a/src/components/KeyboardArea/KeyboardArea.css
+++ b/src/components/KeyboardArea/KeyboardArea.css
@@ -1,10 +1,17 @@
 .keyboard {
+  align-content: space-evenly;
   background: #0e0e0e;
-  border: 1px solid lime;
+  border-radius: 0 0 15px 15px;
   color: lime;
   display: grid;
+  flex: 1 0 auto;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+}
+
+.keyboard header {
+  color: #efefef;
+  font-size: 1rem;
 }
 
 .keyboard .letter.available {
@@ -19,10 +26,6 @@
   display: grid;
 }
 
-.keyboard-row div {
-  border: 1px solid lime;
-}
-
 .keyboard-1 {
   grid-template-columns: repeat(10, 1fr);
 }
@@ -34,3 +37,22 @@
 .keyboard-3 {
   grid-template-columns: repeat(7, 1fr);
 }
+
+.keyboard-3 div:first-child {
+  border-radius: 0 0 0 15px;
+}
+
+.keyboard-3 div:last-child {
+  border-radius: 0 0 15px 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .keyboard header {
+    font-size: 2rem;
+  }
+  .keyboard .letter {
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (min-height: 1366px) {}
