--- a/src/components/WordArea/WordArea.css
+++ b/src/components/WordArea/WordArea.css
@@ -4,11 +4,11 @@
   font-size: 0.6250rem;
   grid-auto-columns: 1fr;
   grid-auto-flow: column;
+  padding: 0.3125rem;
 }
 
 .wordArea div {
-  border-right: 1px solid lime;
-  border-bottom: 1px solid lime;
+  border: 1px solid lime;
   padding: 0.3125rem;
 }
 
@@ -19,5 +19,14 @@
 @media only screen and (min-width: 375px) {
   .wordArea {
     font-size: 0.7500rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .wordArea {
+    font-size: 1rem;
+  }
+  .wordArea div {
+    padding: 1rem;
   }
 }
